# LocalVidPlayer

./: .gitignore  LICENSE  README  README.md  pyproject.toml
backend/: db_utils.py  vid_server.py  vid_utils.py
config/: backend_conf.yaml.example  config_utils.py
frontend/: frontend.js  vid_player.html
